<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/currentStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/state_idle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/advertButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateTextView"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/advertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/advertise_button"
            app:layout_constraintBottom_toTopOf="@+id/discButton"
            app:layout_constraintEnd_toEndOf="@+id/currentStateTextView"
            app:layout_constraintStart_toStartOf="@+id/currentStateTextView"
            app:layout_constraintTop_toBottomOf="@+id/currentStateTextView" />

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/state_explainer_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toTopOf="@+id/currentStateTextView"
            app:layout_constraintEnd_toEndOf="@+id/currentStateTextView"
            app:layout_constraintStart_toStartOf="@+id/currentStateTextView"
            app:layout_constraintTop_toBottomOf="@id/deviceName" />

        <Button
            android:id="@+id/discButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/discover_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/advertButton"
            app:layout_constraintStart_toStartOf="@+id/advertButton"
            app:layout_constraintTop_toBottomOf="@+id/advertButton" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/device_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#E91E63"
            app:layout_constraintBottom_toTopOf="@+id/stateTextView"
            app:layout_constraintEnd_toEndOf="@+id/currentStateTextView"
            app:layout_constraintStart_toStartOf="@+id/currentStateTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>